--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,33 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-12 col-md-12 col-xl-6 d-none d-md-block">
+                        <span class="black fs-13 mb-1">Free Shipping</span>
+                        <p class="gray fs-13 mb-0 d-none d-xl-block">Get 2-day free shipping anywhere in North America.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-12 col-xl-6 d-none d-md-block">
+                        <span class="black fs-13 mb-1">2 years warranty</span>
+                        <p class="gray fs-13 mb-0 d-none d-xl-block">If anything goes wrong in the first two years,
+                            we'll replace it for
+                            free.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-6">
+                <div class="d-flex justify-content-end align-items-center h-100">
+                    <div class="d-flex flex-column flex-md-row align-items-end align-items-md-center">
+                        <div class="me-md-4 text-end mb-4 mb-md-0">
+                            <span class="black fs-2 fw-700 lh-1">${{total}}</span>
+                            <p class="gray fs-13 m-0">Need financing? Learn more </p>
+                        </div>
+                        <button class="btn btn-primary py-2">Buy now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
