--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -1,3 +1,4 @@
+//colors
 .red {
     color: #CB253C !important;
 }
@@ -11,11 +12,31 @@
     line-height: 1 !important;
 }
 
+// texts
 .sub-title {
     font-weight: 100;
     font-size: 14px;
 }
 
+//sizes
 .fs-13 {
     font-size: 13px !important;
+}
+.fs-14 {
+    font-size: 14px !important;
+}
+.fs-15 {
+    font-size: 15px !important;
+}
+.fs-18 {
+    font-size: 18px !important;
+}
+
+//widths
+.w-40 {
+    width: 40%;
+}
+
+.c-pointer {
+    cursor: pointer;
 }
