--- a/src/app/components/slide-show/slide-show.component.html
+++ b/src/app/components/slide-show/slide-show.component.html
@@ -1,28 +1,19 @@
-<div [style.position]="fixed ? 'fixed': 'initial'">
+<div class="carousel">
     <div class="card mb-3">
-        <div class="d-flex justify-content-center">
-            <img class="w-50" src="../assets/img/true_wireless.png" alt="">
+        <div class="card-body">
+            <ng-container *ngFor="let slide of slides; let i = index">
+                <div class="d-flex justify-content-center h-100 fadeIn-animation"
+                    *ngIf="i === currentSlide">
+                    <img [src]="slide.src" class="slide" [style.width]="'60%'" alt="True Wireless" />
+                </div>
+            </ng-container>
         </div>
     </div>
-    <div class="row gx-3">
-        <div class="col-4">
-            <div class="card p-2">
-                <div class="d-flex justify-content-center">
-                    <img class="w-50" src="../assets/img/true_wireless.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card p-2">
-                <div class="d-flex justify-content-center">
-                    <img class="w-50" src="../assets/img/true_wireless.png" alt="">
-                </div>
-            </div>
-        </div>  
-        <div class="col-4">
-            <div class="card p-2">
-                <div class="d-flex justify-content-center">
-                    <img class="w-50" src="../assets/img/true_wireless.png" alt="">
+    <div class="row gx-3 mt-3">
+        <div class="col-4" *ngFor="let slide of slides;  let i = index">
+            <div class="card c-events p-2 h-100 c-pointer" (click)="activeSlide(i)" [ngClass]="{'active': i == currentSlide? true : false}">
+                <div class="d-flex justify-content-center align-items-center h-100">
+                    <img class="w-50" [src]="slide.src" alt="True Wireless">
                 </div>
             </div>
         </div>
