--- a/src/app/layout/content/content.component.html
+++ b/src/app/layout/content/content.component.html
@@ -2,6 +2,7 @@
     <app-header></app-header>
     <div class="content">
         <router-outlet></router-outlet>
+        <app-footer></app-footer>
     </div>
 </div>
 
