--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,21 +1,7 @@
-<div class="header">
+<div class="header mb-5 mb-xl-0">
     <div class="container">
-        <div class="d-flex flex-column justify-content-center align-items-center p-3">
-            <svg [style.width]="'50px'" data-v-32214cc3="" version="1.1" viewBox="0 0 24 24"
-                class="nav__logo--symbol svg-icon svg-fill">
-                <defs>
-                    <path pid="0" id="svgicon-logo-serempre-symbol-a"
-                        d="M3.138 5.931a5.242 5.242 0 0 0-3.131 4.973H0l.008 4.286 16.7-7.305L16.694 0 3.138 5.931z">
-                    </path>
-                </defs>
-                <g _fill="none" fill-rule="nonzero" transform="translate(3)">
-                    <path pid="1" _fill="#0A71B3"
-                        d="M13.572 18.069L.017 24 0 16.114 16.701 8.81l.008 4.286h-.005a5.248 5.248 0 0 1-3.132 4.973zm3.44 1.789a1.367 1.367 0 1 1-2.737.082 1.367 1.367 0 0 1 2.738-.082h-.002z">
-                    </path>
-                    <use _fill="#009DDF" xlink:href="#svgicon-logo-serempre-symbol-a"></use>
-                </g>
-            </svg>
-            <span>serempre</span>
+        <div class="d-flex flex-column justify-content-center align-items-center p-2">
+            <img [style.width]="'50px'" src="assets/img/logo.png" alt="">
         </div>
     </div>
 </div>
