--- a/src/assets/scss/_tabs.scss
+++ b/src/assets/scss/_tabs.scss
@@ -8,6 +8,11 @@
         margin-right: 1rem;
         cursor: pointer;
         border-bottom: 2px solid transparent;
+        white-space:nowrap;
+        font-size: 14px;
+        @media screen and(min-width: 768px) {
+            font-size: 18px;
+        }
     }
     .tab-item.active {
         color: #111111; 
